Bug 377660 - error: ‘errorOccurred’ is not a member of ‘CHECKSUM_::ChecksumProcess’
Summary: error: ‘errorOccurred’ is not a member of ‘CHECKSUM_::ChecksumProcess’
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-15 18:35 UTC by Toni Asensi Esteve
Modified: 2018-05-06 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2017-03-15 18:35:48 UTC
Hi!

Using Ubuntu 16.04 or Kubuntu 16.04: when compiling the latest git version of Krusader those errors are seen:
    
[ 17%] Building CXX object krusader/Dialogs/CMakeFiles/Dialogs.dir/checksumdlg.cpp.o
/home/user/krusader/krusader/Dialogs/checksumdlg.cpp: In constructor ‘CHECKSUM_::ChecksumProcess::ChecksumProcess(QObject*, const QString&)’:
/home/user/krusader/krusader/Dialogs/checksumdlg.cpp:108:20: error: ‘errorOccurred’ is not a member of ‘CHECKSUM_::ChecksumProcess’
     connect(this, &ChecksumProcess::errorOccurred, this, &ChecksumProcess::slotError);
                    ^
krusader/Dialogs/CMakeFiles/Dialogs.dir/build.make:326: recipe for target 'krusader/Dialogs/CMakeFiles/Dialogs.dir/checksumdlg.cpp.o' failed
make[2]: *** [krusader/Dialogs/CMakeFiles/Dialogs.dir/checksumdlg.cpp.o] Error 1
CMakeFiles/Makefile2:541: recipe for target 'krusader/Dialogs/CMakeFiles/Dialogs.dir/all' failed
make[1]: *** [krusader/Dialogs/CMakeFiles/Dialogs.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
Comment 1 Alex Bikadorov 2017-03-15 19:04:50 UTC
Since my commit 2c5d47 at least Qt 5.6 is required.

5.6 is out for a year now, can I assume its available everywhere?
Comment 2 Toni Asensi Esteve 2017-03-16 09:06:06 UTC
I understand you, the problem is that the 16.04 version of Ubuntu, Kubuntu, etc. is very used nowadays because it's a LTS (Long Term Support) version.
        
In its repositories there's no Krusader 2.5, so people have to compile it.
        
Requiring only Qt 5.5.1 makes using the latest Krusader much easier, especially when at work we have to use and share other computers  :-)
        
Although using Qt 5.6 allows Krusader developers to utilize new features. It would have to be seen if those features are worth the inconvenients.
        
Next year there will be a 18.04 version, that will be the new LTS and, of course, it will have a newer Qt version. But maybe the new features are needed nowadays...
Comment 3 Alex Bikadorov 2017-03-16 13:06:24 UTC
Git commit 40d21f7f59ac5d7c0c756638c9f4939c86b22484 by Alexander Bikadorov.
Committed on 16/03/2017 at 13:03.
Pushed by abikadorov into branch 'master'.

Dialog: Fixed build with Qt < 5.6

Start error which causes waiting for ever should only happen in rare cases.
And dialog can manually be aborted.

M  +2    -0    krusader/Dialogs/checksumdlg.cpp

https://commits.kde.org/krusader/40d21f7f59ac5d7c0c756638c9f4939c86b22484
Comment 4 Alex Bikadorov 2017-03-16 13:08:57 UTC
I can deal with 5.5 right now.

Funny thing: Qt 5.6 is also a LTS version