Dialog: Fixed build with Qt < 5.6

Start error which causes waiting for ever should only happen in rare cases.
And dialog can manually be aborted.

BUG: 377660